[package]
name = "agb_play"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
agb = "0.22.2"
critical-section = "1.2.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
